unpackaged/main/default/objects/QHSE_Inspection__c/QHSE_Inspection__c.object-meta.xml
<CustomObject>
    <label>QHSE Inspection</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QHSE Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>