unpackaged/main/default/objects/QHSE_Inspection__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City/المدينة</label>
    <length>50</length>
    <type>Text</type>
</CustomField>