unpackaged/main/default/objects/QHSE_Inspection__c/fields/Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspection Date/تاريخ التفتيش</label>
    <type>Date</type>
</CustomField>