unpackaged/main/default/objects/QHSE_Inspection__c/fields/Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspector Name/اسم المفتش</label>
    <length>255</length>
    <type>Text</type>
</CustomField>