unpackaged/main/default/objects/QHSE_Inspection__c/fields/StationName__c.field-meta.xml
<CustomField>
    <fullName>StationName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Station/المحطة</label>
    <referenceTo>ETSALES_Location__c</referenceTo>
    <relationshipLabel>QHSE Inspections</relationshipLabel>
    <relationshipName>QHSE_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>