unpackaged/main/default/objects/QHSE_Inspection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Designation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inspector_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>StationName__c</columns>
    <columns>StationFormula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>